@@ -1,6 +1,7 @@
 package com.mikael.web.test.thread.day01;
 
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.IntStream;
 
@@ -35,7 +36,7 @@ public class Window {
                 "thread-one")
                 .start();
 
-        List list = List.of(IntStream.range(1, 10));
+        List list = Arrays.asList(IntStream.range(1, 10));
         System.out.println();
     }
 }
